[package]
name = "bitset"
version = "0.2.1"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
edition = "2018"
description = "A low-dimensional linear algebra library for real-time computer graphics."
categories = [
    "data-structures",
    "no_std",
    "bits"
]
keywords = [
    "data-structures",
    "bits",
    "no_std"
]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/lambdaxymox/cglinalg"

[dependencies]
