[package]
name = "bitset"
version = "0.2.4"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
edition = "2018"
description = "A library for working with bit sets of arbitrary length."
categories = [
    "data-structures",
    "bits"
]
keywords = [
    "data-structures",
    "bits",
]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/lambdaxymox/cglinalg"

[dependencies]
